# pyborsh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/pyborsh/: __init__.py  enum.py  errors.py  mixin.py  reader.py  schema.py  types.py  writer.py
tests/: __init__.py  conftest.py  strategies.py  test_enums.py  test_full_coverage.py  test_model_serialization.py  test_primitives.py  test_properties.py  test_rust_compatibility.py
