[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyborsh"
version = "1.0.1"
description = "Pydantic-native Borsh serialization for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ricky" }
]
keywords = ["borsh", "serialization", "pydantic", "solana", "near", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "mypy>=1.18",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/r-near/pyborsh"
Repository = "https://github.com/r-near/pyborsh"

[tool.hatch.build.targets.wheel]
packages = ["src/pyborsh"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DJ",     # flake8-django
    "DTZ",    # flake8-datetimez
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "COM812",   # missing trailing comma (conflicts with formatter)
    "ISC001",   # single line implicit string concatenation (conflicts with formatter)
    "S101",     # assert usage (fine in tests)
    "PLR2004",  # magic value comparison (too noisy)
    "PLR0913",  # too many arguments (sometimes necessary)
    "TRY003",   # long exception messages (we want descriptive errors)
    "EM101",    # string literal in exception (cleaner for simple cases)
    "EM102",    # f-string in exception (cleaner for simple cases)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is fine in tests
    "ARG",      # unused arguments common in fixtures
    "PLR2004",  # magic values in tests are fine
    "SLF001",   # private member access fine in tests
    "PLC0415",  # imports in functions fine for test isolation
    "PT012",    # complex pytest.raises blocks fine in tests
    "PGH003",   # generic type: ignore fine in tests
    "PT011",    # broad pytest.raises fine when testing errors
    "E721",     # type() comparison fine in tests
    "PYI051",   # redundant Literal fine - testing edge cases
    "UP006",    # old-style type hints - testing edge cases
    "UP035",    # deprecated typing imports - testing edge cases
]
"src/pyborsh/mixin.py" = [
    "C901",     # complexity - serialize/deserialize need big switch
    "PLR0911",  # many returns - one per type kind
    "PLR0912",  # many branches - one per type kind
    "PLR0915",  # many statements - inherent to serialization
    "PLC0415",  # import not at top - avoiding circular imports
    "ARG001",   # unused arg model_class - kept for API consistency
    "PERF102",  # .items() vs .values() - we need index tracking
]
"src/pyborsh/schema.py" = [
    "C901",     # complexity - type inference needs many branches
    "PLR0911",  # many returns - one per type
    "PLR0912",  # many branches - one per type
    "PLC0415",  # import not at top - avoiding circular imports
]
"src/pyborsh/enum.py" = [
    "SLF001",   # private member access - we're setting _borsh_enum_parent
]

[tool.ruff.lint.isort]
known-first-party = ["pyborsh"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 50

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pyborsh --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pyborsh"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge",
]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
